@@ -89,3 +89,23 @@ convert_system_path_to_grub_path ()
 
   echo ${drive}${relative_path}
 }
+
+font_path ()
+{
+  if [ "x${GRUB_FONT_PATH}" = "x" ] ; then : ; else
+    echo "${GRUB_FONT_PATH}"
+    return 0
+  fi
+
+  # Prefer system path for space reasons (/boot/grub might be a very small
+  # partition in case of OpenFirmware, etc).
+  for i in /usr/share/grub/unifont.pff /boot/grub/unifont.pff ; do
+    if path=`convert_system_path_to_grub_path $i` ; then
+      GRUB_FONT_PATH="${path}"
+      echo "${GRUB_FONT_PATH}"
+      return 0
+    fi
+  done
+
+  return 1
+}
